<resources>

    <string name="app_name">ReminderIo</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    
    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>

    <string name="login_hint_email">Email</string>
    <string name="login_hint_pass">Password</string>
    <string name="sign_in">SignIn</string>
    <string name="login_option_text">Not Registered Please SignUP</string>
    <string name="msg_enter_name">Please enter name</string>
    <string name="msg_short_name">Username too short</string>
    <string name="msg_enter_email">Please enter email</string>
    <string name="msg_email_error">Invalid email</string>
    <string name="msg_enter_pass1">Please enter password</string>
    <string name="msg_enter_pass2">Please enter new password</string>
    <string name="msg_pass_error">Password too short</string>
    <string name="msg_pass_match">Passwords don\'t match</string>
    <string name="msg_disconnected">Please Check Internet Connection</string>
    <string name="signup_name_text">Name</string>
    <string name="signup_email_text">Email</string>
    <string name="signup_pass1_text">Password</string>
    <string name="signup_pass2_text">Confirm Password</string>
    <string name="button_text_signup">SignUp</string>

</resources>
