<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grdient_shape" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/m_30"
                android:layout_marginRight="@dimen/m_30"
                android:layout_toEndOf="@+id/fragment_container"
                android:layout_toRightOf="@+id/fragment_container"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/create_option_icon"
                        android:background="@drawable/background_corner_white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="06dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="@dimen/m_20"
                            android:background="@drawable/ic_user"
                            android:padding="@dimen/margin_min"
                            android:scaleType="centerInside" />

                        <EditText
                            android:id="@+id/et_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_info_height"
                            android:layout_marginRight="@dimen/m_20"
                            android:background="@drawable/border_shape"
                            android:hint="@string/signup_name_text"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/m_20"
                            android:textColor="@color/settings_divider"
                            android:textColorHint="@color/settings_divider" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/create_option_icon"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@drawable/background_corner_white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="06dp">

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="18dp"
                            android:background="@drawable/ic_email"
                            android:padding="@dimen/margin_min"
                            android:scaleType="centerInside" />

                        <EditText
                            android:id="@+id/et_user_email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/border_shape"
                            android:hint="@string/signup_email_text"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/m_20"
                            android:textColor="@color/settings_divider"
                            android:textColorHint="@color/settings_divider"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/create_option_icon"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@drawable/background_corner_white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="06dp">

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_marginLeft="@dimen/m_20"
                            android:background="@drawable/ic_password"
                            android:padding="@dimen/margin_min"
                            android:scaleType="centerInside" />

                        <EditText
                            android:id="@+id/et_user_pass1"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/border_shape"
                            android:hint="@string/signup_pass1_text"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/m_20"
                            android:textColor="@color/settings_divider"
                            android:textColorHint="@color/settings_divider"
                            android:textSize="@dimen/text_size_medium" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/create_option_icon"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:background="@drawable/background_corner_white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="06dp">

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_marginLeft="@dimen/m_20"
                            android:background="@drawable/ic_password"
                            android:padding="@dimen/margin_min"
                            android:scaleType="centerInside" />

                        <EditText
                            android:id="@+id/et_user_pass2"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginRight="@dimen/m_20"
                            android:background="@drawable/border_shape"
                            android:hint="@string/signup_pass2_text"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/m_20"
                            android:textColor="@color/settings_divider"
                            android:textColorHint="@color/settings_divider"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_user_signup"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/create_option_icon"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_large"
                        android:background="@drawable/blue_backgorund_corner"
                        android:gravity="center"
                        android:text="@string/button_text_signup"
                        android:textColor="#fff"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>